homework_10: tests